force-app/main/default/objects/CIF__c/fields/LeadSubSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSubSource__c</fullName>
    <label>Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>99 Acres</fullName>
            </value>
            <value>
                <fullName>A1 PROPERTIES</fullName>
            </value>
            <value>
                <fullName>ADITYA BIRLA MONEY MART LTD</fullName>
            </value>
            <value>
                <fullName>AGENT</fullName>
            </value>
            <value>
                <fullName>allchecksdeals</fullName>
            </value>
            <value>
                <fullName>BALRAJESHWAR REAL ESTATE P. LTD.</fullName>
            </value>
            <value>
                <fullName>B Data</fullName>
            </value>
            <value>
                <fullName>bharatesates.com</fullName>
            </value>
            <value>
                <fullName>BING</fullName>
            </value>
            <value>
                <fullName>Boat Show</fullName>
            </value>
            <value>
                <fullName>Bombay Times</fullName>
            </value>
            <value>
                <fullName>BQS</fullName>
            </value>
            <value>
                <fullName>Brightroll</fullName>
            </value>
            <value>
                <fullName>Broker Enquiry</fullName>
            </value>
            <value>
                <fullName>Bulk Telecalling</fullName>
            </value>
            <value>
                <fullName>Business Today</fullName>
            </value>
            <value>
                <fullName>cbre.co.in</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Click India</fullName>
            </value>
            <value>
                <fullName>coliers.com</fullName>
            </value>
            <value>
                <fullName>COLOMBIA</fullName>
            </value>
            <value>
                <fullName>DBM</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Direct Mailer</fullName>
            </value>
            <value>
                <fullName>DNA</fullName>
            </value>
            <value>
                <fullName>Economic Times</fullName>
            </value>
            <value>
                <fullName>EDM / Email</fullName>
            </value>
            <value>
                <fullName>EEH OOH</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>