force-app/main/default/objects/CIF__c/fields/MobileNo1__c.field-meta.xml
<CustomField>
    <fullName>MobileNo1__c</fullName>
    <label>Mobile No.1</label>
    <type>Phone</type>
</CustomField>