force-app/main/default/objects/CIF__c/fields/MobileNo2__c.field-meta.xml
<CustomField>
    <fullName>MobileNo2__c</fullName>
    <label>Mobile No.2</label>
    <type>Phone</type>
</CustomField>