force-app/main/default/objects/CIF__c/fields/NameofUnregisteredCorporateLeadSource__c.field-meta.xml
<CustomField>
    <fullName>NameofUnregisteredCorporateLeadSource__c</fullName>
    <label>NameofUnregisteredCorporate(LeadSource)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>