force-app/main/default/objects/CIF__c/fields/NeighbourhoodPlaces__c.field-meta.xml
<CustomField>
    <fullName>NeighbourhoodPlaces__c</fullName>
    <label>Neighbourhood Places</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Schools</fullName>
            </value>
            <value>
                <fullName>Creches</fullName>
            </value>
            <value>
                <fullName>Colleges</fullName>
            </value>
            <value>
                <fullName>Gardens</fullName>
            </value>
            <value>
                <fullName>Departmental Stores</fullName>
            </value>
            <value>
                <fullName>Malls</fullName>
            </value>
            <value>
                <fullName>Multiplexes</fullName>
            </value>
            <value>
                <fullName>Hospitals</fullName>
            </value>
            <value>
                <fullName>Place of worship</fullName>
            </value>
            <value>
                <fullName>Restaurants</fullName>
            </value>
            <value>
                <fullName>Gyms</fullName>
            </value>
            <value>
                <fullName>Night Clubs</fullName>
            </value>
            <value>
                <fullName>IT Parks</fullName>
            </value>
            <value>
                <fullName>High Street Shopping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>