force-app/main/default/objects/CIF__c/fields/Pre_Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_User__c</fullName>
    <label>Pre Sales User</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abhishek Sonawane</fullName>
            </value>
            <value>
                <fullName>Ankita Umbre</fullName>
            </value>
            <value>
                <fullName>Jinal Vora</fullName>
            </value>
            <value>
                <fullName>K Deepak Gupta</fullName>
            </value>
            <value>
                <fullName>K Faheem Surve</fullName>
            </value>
            <value>
                <fullName>K Komal Shinde</fullName>
            </value>
            <value>
                <fullName>Komal Chawla</fullName>
            </value>
            <value>
                <fullName>KServe</fullName>
            </value>
            <value>
                <fullName>Minal Karnik</fullName>
            </value>
            <value>
                <fullName>Pratiksha Bhagat</fullName>
            </value>
            <value>
                <fullName>Prem Wara</fullName>
            </value>
            <value>
                <fullName>Saleeta Dubey</fullName>
            </value>
            <value>
                <fullName>Shubham Shinde</fullName>
            </value>
            <value>
                <fullName>Siddhesh Chalke</fullName>
            </value>
            <value>
                <fullName>Swati Bandivdekar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>