force-app/main/default/objects/CIF__c/fields/ReferenceSource__c.field-meta.xml
<CustomField>
    <fullName>ReferenceSource__c</fullName>
    <label>Reference Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Management Reference</fullName>
            </value>
            <value>
                <fullName>Employee Reference</fullName>
            </value>
            <value>
                <fullName>Existing Customer Reference</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>