force-app/main/default/objects/CIF__c/fields/Referral_Details__c.field-meta.xml
<CustomField>
    <fullName>Referral_Details__c</fullName>
    <label>Referral Details</label>
    <type>TextArea</type>
</CustomField>