force-app/main/default/objects/CIF__c/fields/Referral_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Sub_Source__c</fullName>
    <label>Referral Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee reference</fullName>
            </value>
            <value>
                <fullName>Existing client reference</fullName>
            </value>
            <value>
                <fullName>Management reference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>