force-app/main/default/objects/CIF__c/fields/Sales_manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_manager__c</fullName>
    <label>Sales manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amrita Dhall</fullName>
            </value>
            <value>
                <fullName>Anita Pawar</fullName>
            </value>
            <value>
                <fullName>Charanjeet Kaur</fullName>
            </value>
            <value>
                <fullName>Chetan Pathare</fullName>
            </value>
            <value>
                <fullName>Devansh Patwa</fullName>
            </value>
            <value>
                <fullName>Deven Sawant</fullName>
            </value>
            <value>
                <fullName>Devika Sharma</fullName>
            </value>
            <value>
                <fullName>DIRECT</fullName>
            </value>
            <value>
                <fullName>Gaurav Sharma</fullName>
            </value>
            <value>
                <fullName>Gaurissh Ranade</fullName>
            </value>
            <value>
                <fullName>Hiral Thakar</fullName>
            </value>
            <value>
                <fullName>Hiren Jethva</fullName>
            </value>
            <value>
                <fullName>Mayura Sharma</fullName>
            </value>
            <value>
                <fullName>Nandkishor Narkar</fullName>
            </value>
            <value>
                <fullName>Pallavi Bhoir</fullName>
            </value>
            <value>
                <fullName>Pankaj Gandhi</fullName>
            </value>
            <value>
                <fullName>Paresh Shah</fullName>
            </value>
            <value>
                <fullName>Parin Kotrani</fullName>
            </value>
            <value>
                <fullName>Parmanand Tiwari</fullName>
            </value>
            <value>
                <fullName>Pooja Shrivastav</fullName>
            </value>
            <value>
                <fullName>Pranay Gaikwad</fullName>
            </value>
            <value>
                <fullName>Prashant  Pimpariya</fullName>
            </value>
            <value>
                <fullName>Prayas Madhukar Bansode</fullName>
            </value>
            <value>
                <fullName>Preeti Parab</fullName>
            </value>
            <value>
                <fullName>Raghu Iyer</fullName>
            </value>
            <value>
                <fullName>Rahul Dilip Kawade</fullName>
            </value>
            <value>
                <fullName>Rahul Keshri</fullName>
            </value>
            <value>
                <fullName>Rakesh Shah</fullName>
            </value>
            <value>
                <fullName>Rashmi Nadange</fullName>
            </value>
            <value>
                <fullName>Roshni Chanda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>