force-app/main/default/objects/CIF__c/fields/SecondaryEmail__c.field-meta.xml
<CustomField>
    <fullName>SecondaryEmail__c</fullName>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>