force-app/main/default/objects/CIF__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Emp / Mgmt Reference</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Exhibitions</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Individual calling</fullName>
            </value>
            <value>
                <fullName>Magazines</fullName>
            </value>
            <value>
                <fullName>Newspapers</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Paper Inserts</fullName>
            </value>
            <value>
                <fullName>PreSales</fullName>
            </value>
            <value>
                <fullName>Property Portals</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Surround Marketing</fullName>
            </value>
            <value>
                <fullName>R Circle Caller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>