force-app/main/default/objects/CIF__c/fields/Spouse_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Occupation__c</fullName>
    <label>Spouse Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salaried</fullName>
            </value>
            <value>
                <fullName>Self-employed</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Housewife</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>