force-app/main/default/objects/CIF__c/fields/TimeLine__c.field-meta.xml
<CustomField>
    <fullName>TimeLine__c</fullName>
    <label>Time Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready Possession</fullName>
            </value>
            <value>
                <fullName>Near to Possession</fullName>
            </value>
            <value>
                <fullName>1 to 2 year</fullName>
            </value>
            <value>
                <fullName>2 to 3 years</fullName>
            </value>
            <value>
                <fullName>More than 3 years</fullName>
            </value>
            <value>
                <fullName>Not Important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>