force-app/main/default/objects/CIF__c/fields/UnRegistered_Broker_Type__c.field-meta.xml
<CustomField>
    <fullName>UnRegistered_Broker_Type__c</fullName>
    <label>UnRegistered Broker Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>OutStation</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>