force-app/main/default/objects/CIF__c/fields/UnregisteredChannelPartnerEmail__c.field-meta.xml
<CustomField>
    <fullName>UnregisteredChannelPartnerEmail__c</fullName>
    <label>Unregistered Channel Partner Email</label>
    <type>Email</type>
</CustomField>