force-app/main/default/objects/CIF__c/fields/UnregisteredChannelPartnerMobile__c.field-meta.xml
<CustomField>
    <fullName>UnregisteredChannelPartnerMobile__c</fullName>
    <label>UnregisteredChannelPartnerMobile</label>
    <type>Phone</type>
</CustomField>