force-app/main/default/objects/CIF__c/fields/UnregisteredChannelPartnerName__c.field-meta.xml
<CustomField>
    <fullName>UnregisteredChannelPartnerName__c</fullName>
    <label>Unregistered Channel Partner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>