force-app/main/default/objects/CIF__c/fields/Walk_in_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Walk_in_Corporate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Walk-in Corporate</label>
    <referenceTo>Corporates__c</referenceTo>
    <relationshipLabel>CIF</relationshipLabel>
    <relationshipName>CIF</relationshipName>
    <type>Lookup</type>
</CustomField>