force-app/main/default/objects/CIF__c/fields/Walk_In_Details__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_Details__c</fullName>
    <label>Walk-In Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>