force-app/main/default/objects/CIF__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>